Further tweaking to design

--- a/contact.html
+++ b/contact.html
@@ -24,26 +24,26 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="content not-intro">
-      <section class="heading">
-        <h1>Peppertech <span class="subtitle">Contact</span></h1>
-      </section>
-      <section class="contact">
-        <div class="purply">
+    <div class="content contact">
+      <div class="intro">
+        <section class="heading">
+          <h1>Peppertech <span class="subtitle">Contact</span></h1>
+        </section>
+        <div class="copy">
           <p>I'd love to hear from you, whether it's feedback, an enquiry on work or if you wanted to work with me.</p>
           <p>I will usually get back to you within a few hours.</p>
         </div>
-        <form id="contact" name="contact" enctype="multipart/form-data" onsubmit="event.preventDefault();sendForm();" autocomplete="new-password">
-          <label for="name">Name:</label>
-          <input id="name" class="form-input" type="text" name="name" placeholder="Your name" required />
-          <label for="email">Email:</label>
-          <input id="email" class="form-input" type="email" name="email" placeholder="Your email" required />
-          <label for="message">Message:</label>
-          <textarea id="message" class="form-input" name="message" rows="11" placeholder="Your message..." required></textarea>
-          <p id="form-message" style="display: none;"></p>
-          <button id="form-button" type="submit" class="button">Send</button>
-        </form>
-      </section>
+      </div>
+      <form id="contact" name="contact" class="purply" enctype="multipart/form-data" onsubmit="event.preventDefault();sendForm();" autocomplete="new-password">
+        <label for="name">Name:</label>
+        <input id="name" class="form-input" type="text" name="name" placeholder="Your name" required />
+        <label for="email">Email:</label>
+        <input id="email" class="form-input" type="email" name="email" placeholder="Your email" required />
+        <label for="message">Message:</label>
+        <textarea id="message" class="form-input" name="message" rows="11" placeholder="Your message..." required></textarea>
+        <p id="form-message" style="display: none;"></p>
+        <button id="form-button" type="submit" class="button">Send</button>
+      </form>
     </div>
     <link href="styling.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
@@ -91,7 +91,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'UA-60093553-1');
     </script>
     <!-- end analytics-->
