--- a/portfolio.html
+++ b/portfolio.html
@@ -22,15 +22,18 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="content not-intro">
-      <section class="heading">
-        <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
-      </section>
-      <div class="purply">
-        <p>Find my current work below.</p>
-        <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+    <div class="content">
+      <div class="intro">
+        <section class="heading">
+          <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
+        </section>
+        <div class="copy">
+          <p>Find my current work below.</p>
+          <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+        </div>
       </div>
-      <section class="portfolio">
+      <section class="portfolio purply">
+        <h2 class="copy">My Own Projects</h2>
         <div class="portfolio-items">
           <div class="container">
               <h3>ZIKI.FM</h3>
@@ -44,6 +47,24 @@
             <img alt="Feedify Website Screenshot" src="images/feedify.jpg" />
             <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
             <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
+          </div>
+        </div>
+      </section>
+      <section class="portfolio purply">
+        <h2 class="copy">Projects for Others</h2>
+        <div class="portfolio-items">
+          <div class="container">
+            <h3>handydans3dprints.co.uk</h3>
+            <!-- <img alt="Feedify Website Screenshot" src="images/feedify.jpg" /> -->
+            <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
+            <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
+          </div>
+          <div class="container">
+            <h3>fourpawsretreat.co.uk</h3>
+            <!-- <img alt="" src="images/zikifm.jpg" /> -->
+            <p>ZIKI.FM is a music news and events aggregator</p>
+            <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
+            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
           </div>
         </div>
       </section>
