--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <nav>
+    <nav class="fadeIn">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
@@ -23,17 +23,19 @@
       </ul>
     </nav>
     <div class="content">
-      <div class="intro">
+      <div class="intro fadeIn">
         <section class="heading">
           <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
         </section>
-        <div class="copy">
-          <p>Find my current work below.</p>
-          <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+        <div class="copy openEqually">
+          <div class="slideIn">
+            <p>Find my current work below. I like to work on my own projects as well as creating websites and webapps for others.</p>
+            <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
+          </div>
         </div>
       </div>
       <section class="portfolio purply">
-        <h2 class="copy">My Own Projects</h2>
+        <h2 class="copy">My Own Projects <a id="own-projects" href="#own-projects">#</a></h2>
         <div class="portfolio-items">
           <div class="container">
               <h3>ZIKI.FM</h3>
@@ -51,7 +53,7 @@
         </div>
       </section>
       <section class="portfolio purply">
-        <h2 class="copy">Projects for Others</h2>
+        <h2 class="copy">Projects for Others <a id="projects-for-others" href="#projects-for-others">#</a></h2>
         <div class="portfolio-items">
           <div class="container">
             <h3>handydans3dprints.co.uk</h3>
