--- a/portfolio.html
+++ b/portfolio.html
@@ -56,17 +56,16 @@
         <h2 class="copy">Projects for Others <a id="projects-for-others" href="#projects-for-others">#</a></h2>
         <div class="portfolio-items">
           <div class="container">
-            <h3>handydans3dprints.co.uk</h3>
+            <h3>Handy Dan's 3D Prints</h3>
             <!-- <img alt="Feedify Website Screenshot" src="images/feedify.jpg" /> -->
-            <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
-            <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
+            <p>A website created for a 3D Printing company</p>
+            <a href="https://www.handydans3dprints.co.uk" title="https://www.handydans3dprints.co.uk" class="button">Check it out</a>
           </div>
           <div class="container">
-            <h3>fourpawsretreat.co.uk</h3>
+            <h3>Four Paws Retreat</h3>
             <!-- <img alt="" src="images/zikifm.jpg" /> -->
-            <p>ZIKI.FM is a music news and events aggregator</p>
-            <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
-            <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
+            <p>A website built with a CMS for a pet sitting and boarding company</p>
+            <a href="http://www.fourpawsretreat.co.uk/" title="http://www.fourpawsretreat.co.uk/" class="button">Check it out</a>
           </div>
         </div>
       </section>
