--- a/portfolio.html
+++ b/portfolio.html
@@ -1,86 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <title>Peppertech Portfolio</title>
-    <style>
-      body, body a {
-        background: #060301;
-        color: #060301;
-      }
-      img {
-        width: 0%;
-      }
-    </style>
-  </head>
-  <body>
-    <nav class="fadeIn">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="content">
-      <div class="intro fadeIn">
-        <section class="heading">
-          <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
-        </section>
-        <div class="copy openEqually">
-          <div class="slideIn">
-            <p>Find my current work below. I like to work on my own projects as well as creating websites and webapps for others.</p>
-            <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services outlined on this site in my spare time.</p>
-          </div>
+
+<head>
+  <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
+  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <title>Peppertech Portfolio</title>
+  <style>
+    body,
+    body a {
+      background: #060301;
+      color: #060301;
+    }
+
+    img {
+      width: 0%;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="fadeIn">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <div class="content">
+    <div class="intro fadeIn">
+      <section class="heading">
+        <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
+      </section>
+      <div class="copy openEqually">
+        <div class="slideIn">
+          <p>Find my current work below. I like to work on my own projects as well as creating websites and webapps for
+            others.</p>
+          <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services
+            outlined on this site in my spare time.</p>
         </div>
       </div>
-      <section class="portfolio purply">
-        <h2 class="copy">My Own Projects <a id="own-projects" href="#own-projects">#</a></h2>
-        <div class="portfolio-items">
-          <div class="container">
-              <h3>ZIKI.FM</h3>
-              <img alt="ZIKI.FM Website Screenshot" src="images/zikifm.jpg" />
-              <p>ZIKI.FM is a music news and events aggregator</p>
-              <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
-              <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
-          </div>
-          <div class="container">
-            <h3>feedify.xyz</h3>
-            <img alt="Feedify Website Screenshot" src="images/feedify.jpg" />
-            <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and Bootstrap front-end.</p>
-            <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
-          </div>
-        </div>
-      </section>
-      <section class="portfolio purply">
-        <h2 class="copy">Projects for Others <a id="projects-for-others" href="#projects-for-others">#</a></h2>
-        <div class="portfolio-items">
-          <div class="container">
-            <h3>Handy Dan's 3D Prints</h3>
-            <!-- <img alt="Feedify Website Screenshot" src="images/feedify.jpg" /> -->
-            <p>A website created for a 3D Printing company</p>
-            <a href="https://www.handydans3dprints.co.uk" title="https://www.handydans3dprints.co.uk" class="button">Check it out</a>
-          </div>
-          <div class="container">
-            <h3>Four Paws Retreat</h3>
-            <!-- <img alt="" src="images/zikifm.jpg" /> -->
-            <p>A website built with a CMS for a pet sitting and boarding company</p>
-            <a href="http://www.fourpawsretreat.co.uk/" title="http://www.fourpawsretreat.co.uk/" class="button">Check it out</a>
-          </div>
-        </div>
-      </section>
     </div>
-    <link href="styling.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60093553-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-60093553-1');
-    </script>
-    <!-- end analytics-->
-  </body>
+    <section class="portfolio purply">
+      <h2 class="copy">My Own Projects <a id="own-projects" href="#own-projects">#</a></h2>
+      <div class="portfolio-items">
+        <div class="container">
+          <h3>ZIKI.FM</h3>
+          <img alt="ZIKI.FM Website Screenshot" src="images/zikifm.jpg" />
+          <p>ZIKI.FM is a music news and events aggregator</p>
+          <p>Built with a MERN stack, hosted on DigitalOcean on Ubuntu VM and Material-UI front-end</p>
+          <a href="https://ziki.fm" title="ZIKI.FM" class="button">Check it out</a>
+        </div>
+        <div class="container">
+          <h3>feedify.xyz</h3>
+          <img alt="Feedify Website Screenshot" src="images/feedify.jpg" />
+          <p>feedify.xyz was a second iteration of a PHP RSS reader that was rebuilt using NodeJS Express server and
+            Bootstrap front-end.</p>
+          <a href="https://feedify.xyz" title="feedify.xyz" class="button">Check it out</a>
+        </div>
+      </div>
+    </section>
+    <section class="portfolio purply">
+      <h2 class="copy">Projects for Others <a id="projects-for-others" href="#projects-for-others">#</a></h2>
+      <div class="portfolio-items">
+        <div class="container">
+          <h3>Handy Dan's 3D Prints</h3>
+          <!-- <img alt="Feedify Website Screenshot" src="images/feedify.jpg" /> -->
+          <p>A website created for a 3D Printing company</p>
+          <a href="https://www.handydans3dprints.co.uk" title="https://www.handydans3dprints.co.uk" class="button">Check
+            it out</a>
+        </div>
+        <div class="container">
+          <h3>Four Paws Retreat</h3>
+          <!-- <img alt="" src="images/zikifm.jpg" /> -->
+          <p>A website built with a CMS for a pet sitting and boarding company</p>
+          <a href="http://www.fourpawsretreat.co.uk/" title="http://www.fourpawsretreat.co.uk/" class="button">Check it
+            out</a>
+        </div>
+      </div>
+    </section>
+  </div>
+  <link href="styling.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60093553-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-60093553-1');
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/serviceWorker.js')
+    }
+  </script>
+  <!-- end analytics-->
+</body>
 </html>
