--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
           <div class="slideIn">
             <p>I'd love to hear from you, whether it's feedback, an enquiry on work or if you wanted to work with me.</p>
             <p>I will usually get back to you within a few hours.</p>
+            <p>Registered with Companies House: PEPPERTECHUK LTD, 12191874, UK</p>
           </div>
         </div>
       </div>
