--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <div class="slideIn">
           <p>Find my current work below. I like to work on my own projects as well as creating websites and webapps for
             others.</p>
-          <p>I'm currently employed by Three UK as a Digital Development Manager, but I still provide the services
+          <p>I'm currently employed by Waitrose & Partners as a Front End Product Engineer. I still provide the services
             outlined on this site in my spare time.</p>
         </div>
       </div>
