--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Portfolio by Chris Wiseman. Fullstack JavaScript Developer">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Portfolio by Chris Wiseman - Web Developer"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,shrink-to-fit=no"
+    />
     <title>Peppertech Portfolio</title>
     <style>
-      body, body a {
+      body,
+      body a {
         background: #060301;
         color: #060301;
         width: 100%;
@@ -31,40 +38,80 @@
         </section>
         <div class="copy openEqually">
           <div class="slideIn">
-            <p>I'd love to hear from you, whether it's feedback, an enquiry on work or if you wanted to work with me.</p>
+            <p>
+              I'd love to hear from you, whether it's feedback, an enquiry on
+              work or if you wanted to work with me.
+            </p>
             <p>I will usually get back to you within a few hours.</p>
-            <p>Registered with Companies House: PEPPERTECHUK LTD, 12191874, UK</p>
+            <p>
+              Registered with Companies House: PEPPERTECHUK LTD, 12191874, UK
+            </p>
           </div>
         </div>
       </div>
-      <form id="contact" name="contact" class="purply" enctype="multipart/form-data" onsubmit="event.preventDefault();sendForm();" autocomplete="new-password">
+      <form
+        id="contact"
+        name="contact"
+        class="purply"
+        enctype="multipart/form-data"
+        onsubmit="event.preventDefault();sendForm();"
+        autocomplete="new-password"
+      >
         <label for="name">Name:</label>
-        <input id="name" class="form-input" type="text" name="name" placeholder="Your name" required />
+        <input
+          id="name"
+          class="form-input"
+          type="text"
+          name="name"
+          placeholder="Your name"
+          required
+        />
         <label for="email">Email:</label>
-        <input id="email" class="form-input" type="email" name="email" placeholder="Your email" required />
+        <input
+          id="email"
+          class="form-input"
+          type="email"
+          name="email"
+          placeholder="Your email"
+          required
+        />
         <label for="message">Message:</label>
-        <textarea id="message" class="form-input" name="message" rows="11" placeholder="Your message..." required></textarea>
+        <textarea
+          id="message"
+          class="form-input"
+          name="message"
+          rows="11"
+          placeholder="Your message..."
+          required
+        ></textarea>
         <p id="form-message" style="display: none;"></p>
         <button id="form-button" type="submit" class="button">Send</button>
       </form>
     </div>
     <link href="styling.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <script>
       var form = document.getElementById('contact');
       var xhr = new XMLHttpRequest();
       var successMessage = 'Message sent. I will email you back soon.';
-      var failMessage = 'Error! Please try again later or email me directly at <a href="mailto:chris@peppertech.co.uk">chris@peppertech.co.uk</a>';
+      var failMessage =
+        'Error! Please try again later or email me directly at <a href="mailto:chris@peppertech.co.uk">chris@peppertech.co.uk</a>';
       var message = document.getElementById('form-message');
       message.style.display = 'none';
 
       function sendForm() {
-        xhr.addEventListener('load', function(event) {
-          if(event.target.response === "Success"){
+        xhr.addEventListener('load', function (event) {
+          if (event.target.response === 'Success') {
             var forminput = document.getElementsByClassName('form-input');
-            
-            for(var i=0; i < forminput.length; i++) {
+
+            for (var i = 0; i < forminput.length; i++) {
               forminput[i].disabled = true;
             }
             document.getElementById('form-button').remove();
@@ -77,7 +124,7 @@
           }
         });
 
-        xhr.addEventListener('error', function(event) {
+        xhr.addEventListener('error', function (event) {
           message.innerHTML = failMessage;
           message.style.display = 'block';
         });
@@ -89,15 +136,20 @@
       }
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60093553-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-60093553-1"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-60093553-1');
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/serviceWorker.js')
-        }
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-60093553-1');
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/serviceWorker.js');
+      }
     </script>
     <!-- end analytics-->
   </body>
