--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
       </section>
       <section class="copy openEqually">
         <div class="slideIn">
-          <p>
-            Welcome to my portfolio. I am a Web Developer from the UK
-          </p>
+          <p>Welcome to my portfolio. I am a Web Developer from the UK</p>
           <p>
             Currently, my main focus is Web Development in React, NodeJS and
             MySQL.
@@ -50,7 +48,7 @@
         </div>
       </section>
     </div>
-    <link href="styling.css" rel="stylesheet" />
+    <link href="global.css" rel="stylesheet" defer />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
