--- a/portfolio.html
+++ b/portfolio.html
@@ -133,7 +133,8 @@
         </div>
       </div>
     </div>
-    <link href="styling.css" rel="stylesheet" />
+    <link href="global.css" rel="stylesheet" defer />
+    <link href="portfolio.css" rel="stylesheet" defer />
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
