--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,11 @@
       </ul>
     </nav>
     <div class="content contact">
-      <div class="intro fadeIn">
+      <div class="intro">
         <section class="heading">
           <h1>Peppertech <span class="subtitle">Contact</span></h1>
         </section>
-        <div class="copy openEqually">
-          <div class="slideIn">
+        <div class="copy">
             <p>
               I'd love to hear from you, whether it's feedback, an enquiry on
               work or if you wanted to work with me.
@@ -46,7 +45,6 @@
             <p>
               Registered with Companies House: PEPPERTECHUK LTD, 12191874, UK
             </p>
-          </div>
         </div>
       </div>
       <form
