--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
       </section>
     </div>
     <link href="global.css" rel="stylesheet" defer />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
