--- a/portfolio.html
+++ b/portfolio.html
@@ -133,10 +133,8 @@
     </div>
     <link href="global.css" rel="stylesheet" defer />
     <link href="portfolio.css" rel="stylesheet" defer />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
