--- a/contact.html
+++ b/contact.html
@@ -91,14 +91,8 @@
     </div>
     <link href="global.css" rel="stylesheet" defer />
     <link href="contact.css" rel="stylesheet" defer />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <script>
       const form = document.getElementById('contact');
       const xhr = new XMLHttpRequest();
