--- a/portfolio.html
+++ b/portfolio.html
@@ -32,22 +32,20 @@
       </ul>
     </nav>
     <div class="content">
-      <div class="intro fadeIn">
+      <div class="intro">
         <section class="heading">
           <h1>Peppertech <span class="subtitle">Portfolio</span></h1>
         </section>
-        <div class="copy openEqually">
-          <div class="slideIn">
+        <div class="copy">
             <p>
               Find my current work below. I like to work on my own projects as
               well as creating websites and webapps for others.
             </p>
             <p>
-              I'm currently employed by Waitrose & Partners as a Front End
+              I'm currently employed by Waitrose & Partners as a Senior Front End
               Product Engineer. I still provide the services outlined on this
               site in my spare time.
             </p>
-          </div>
         </div>
       </div>
       <section class="portfolio purply">
@@ -133,11 +131,10 @@
         </div>
       </div>
     </div>
-    <link href="styling.css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand"
-      rel="stylesheet"
-    />
+    <link href="global.css" rel="stylesheet" defer />
+    <link href="portfolio.css" rel="stylesheet" defer />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
